--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Classroom</title>
-    <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/Google_Classroom_icon.svg/1200px-Google_Classroom_icon.svg.png">
+    <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/5/59/Google_Classroom_Logo.png">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
@@ -19,6 +19,11 @@
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
         <div class="title">Minecraft WebGL</div>
+	<img src="img1.png"/>
+	<img src="img2.png"/>
+	<img src="img3.png"/>
+	<img src="img4.png"/>
+	<img src="img5.png"/>
       </div>
     </div>
   </body>
